--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -208,19 +208,22 @@ td { vertical-align: top; }
 
 html, body { height: 100%; }
 
+h3.alt { color: red; opacity: 0.5; }
+
 #main { height: 100%; }
 
+#cover { color: #fff; text-shadow: 1px 1px 2px #888;  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHklEQVQIHWOw56o98///fwZkzAjioAMmdAEQn3hBAO6aEIuiymm6AAAAAElFTkSuQmCC); }
+#cover h1 { font-family: 'Patua One'; }
 
-#cover { background: #eaeaea url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHklEQVQIHWOw56o98///fwZkzAjioAMmdAEQn3hBAO6aEIuiymm6AAAAAElFTkSuQmCC); }
-
-article { min-height: 100%; background: #eaeaea; width: 100%; display: block; overflow:hidden; position: fixed; top:0; left: 0; }
+article { min-height: 100%; background: #eaeaea; width: 100%; display: block; overflow:hidden; position: fixed; top:0; left: 0;line-height: 1; }
 article.ui-active { z-index: 200; display:block; }
-article > img { width: 100%; display: block; margin: 0 auto; }
-article:nth-of-type(2n) { background: #ddd; ;}
+article > img { width: 100%; display: block; margin: 0 auto; z-index: 100; }
+article:nth-of-type(2n) { background: #222; color: #eaeaea;}
 
 article > pre { margin-left: 20%; font-weight: bold;}
 
 article > p {
+  line-height: 1.4em;
   margin: 3em auto;
   width: 960px;
   -moz-column-count: 2;
@@ -231,16 +234,16 @@ article > p {
   column-gap: 20px;
 }
 
-article > h2 { width: 960px; margin: 1em auto 0; font-size: 4em; }
+article > h1 { width: 960px; margin: 1em auto 0; font-size: 6em; font-weight: bold; }
+article > h2 { width: 960px; margin: 1em auto 0; font-size: 4em; font-weight: bold; }
 article > h3,
 article > time { width: 960px; margin: 1em auto; font-size: 2em; }
 
+article .bottom { position: absolute; bottom: 100px; left: 100px; }
 
+article > iframe { margin: 100px auto 0; display: block; }
 
-
-
-
-
+article.footer { background: #eaeaea; color: #222; }
 
 
 /* ==|== media queries ======================================================
